--- a/site/docsource/Why_BuckleScript.adoc
+++ b/site/docsource/Why_BuckleScript.adoc
@@ -2,7 +2,7 @@
 
 ### Benefits of JavaScript platform
 
-JavaScript is not just *the* browser language, it's also the *only*
+JavaScript is not just _the_ browser language, it's also the _only_
 existing cross platform language. It is truly everywhere: users don't
 need to install binaries or use package managers to access software,
 just a link will work.
@@ -13,16 +13,18 @@ increasingly capable of supporting large applications.
 
 ### Problems of JavaScript && how BuckleScript solves it
 
-BuckleScript is mainly designed to solve the problems of *large scale JavaScript programming*:
+BuckleScript is mainly designed to solve the problems of _large scale_ JavaScript programming:
 
-.  Lack of type-safety:
-   {OCaml}[OCaml] offers an industrial-strength
-   state-of-the-art type system and provides type inference (i.e. No
-   verbose type annotation required), which proves
+Type-safety:: OCaml offers an industrial-strength
+   state-of-the-art type system and provides very strong type inference (i.e. No
+   verbose type annotation required compared with typescript), which proves
    http://programmers.stackexchange.com/questions/215482/what-are-the-safety-benefits-of-a-type-system[invaluable]
-   in managing large projects.
+   in managing large projects. OCaml's type system is not just for tooling,
+   it is a _sound_ type system which means it is guaranteed that there will
+   be no runtime type errors after type checking.
 
-.  Dead code: A large amount of web-development relies on inclusion of
+High quality dead code elimination::
+ A large amount of web-development relies on inclusion of
    code dependencies by copying or referencing CDNs (the very thing
    that makes JavaScript highly accessible), but this also introduces
    a lot of https://en.wikipedia.org/wiki/Dead_code[dead code]. This
@@ -31,13 +33,12 @@ BuckleScript is mainly designed to solve the problems of *large scale JavaScript
    powerful dead-code elimination at all levels:
 
       - Function and module level elimination is facilitated by the
-      sophistication of the type-system of OCaml and
-      purity analysis.
+      sophistication of the type-system of OCaml and _purity analysis_.
       - At the global level BuckleScript generates code ready for
       dead-code elimination done by bundling tools such as the
       {closure}[Google closure-compiler].
 
-.  Lack of offline optimizations: JavaScript is a dynamic language, it
+Offline optimizations:: JavaScript is a dynamic language, it
    takes a performance-hit for the VM to optimize code at runtime.
    While some JS engines circumvent the problem to some extent by
    http://v8project.blogspot.com/2015/07/code-caching.html[caching],
@@ -47,18 +48,19 @@ BuckleScript is mainly designed to solve the problems of *large scale JavaScript
    implementation is able to provide many optimizations during offline
    compilation, allowing the runtime code to be extremely fast.
 
-. Run your programs on all platforms, but run your system *faster*
+JS platform and Native platform::
+  Run your programs on all platforms, but run your system _faster_
   under specific platforms. Javascript is everywhere but it does not
   mean we have to run all apps in JS, under several platforms, for
   example, server side or iOS/Android native apps, when programs are
-  written in OCaml, it can also be compiled to native code for *best
-  performance*.
+  written in OCaml, it can also be compiled to native code for _better
+  and reliable performance_.
 
 While a strong type-system helps in countering these problems, at the
 same time we hope to avoid some of the problems faced in using other
 offline {transpile-list}[transpilation systems]:
 
-* Slow compilation: OCaml byte-code compilation is known to be fast
+Slow compilation:: OCaml byte-code compilation is known to be fast
   (one or two orders of magnitude faster than other similar languages:
 http://www.scala-lang.org/[Scala] or
   https://www.haskell.org/[Haskell]),
@@ -67,17 +69,27 @@ http://www.scala-lang.org/[Scala] or
   {BuckleScript-playground}[playground], the native backend is one
   order faster than the JS backend.
 
-* Un-readable JS Code and hard to integrate with existing JS
-  libraries: When compiling to JavaScript, many systems
+Un-readable JS Code and hard to integrate with existing JS  libraries::
+When compiling to JavaScript, many systems
   generate code, that while syntactically and semantically correct is
   not human-readable and very difficult to debug and profile.
   Our BuckleScript implementation and the multi-pass compilation  strategy of OCaml,
   allows us to avoid {name-mangling}[name-mangling],
   and produce JavaScript code that is human-readable and easier to debug and
   maintain. More importantly, this makes integration with existing JS
-  libraries much easier.
+  libraries _much easier_.
 
-* Loss of code-structure: Many systems generate JavaScript code that is essentially a
+Large JS output even for a simple program::
+In BuckleScript, a `Hello world` program generates _20 bytes_ JS code
+instead of _50K bytes_. This is due to that BuckleScript has an excellent
+integration with JS libs that unlike most JS compilers,
+all BuckleScript's runtime is written in OCaml itself so that these
+runtime libraries are only needed when user actually call it.
+
+
+
+Loss of code-structure::
+ Many systems generate JavaScript code that is essentially a
   https://en.wikipedia.org/wiki/Big_ball_of_mud[big ball of mud]. We try
   to keep the original structure of the code by mapping one OCaml module
   to one JS module.
