more clean api (+3 squashed commits) Squashed commits: [f5f00dd] split js into js_types, provide Js.null and Js.undefined [b034aff] more docs and more tests [f479a48] more tests for type safe typeof (+2 squashed commits) Squashed commits: [17fe000] more ides [94f4314] more bindings for node and practical solution to get typesafe typeof

--- a/site/docsource/Manual.adoc
+++ b/site/docsource/Manual.adoc
@@ -44,6 +44,8 @@ include::./JS-call-OCaml.adoc[]
 
 include::./OCaml-call-JS.adoc[]
 
+include::./js-lib.adoc[]
+
 include::./Compiler-options.adoc[]
 
 include::./How-to-adapt-your-build-system.adoc[]
