--- a/site/docsource/Manual.adoc
+++ b/site/docsource/Manual.adoc
@@ -1,6 +1,6 @@
 # https://github.com/bloomberg/bucklescript[BuckleScript] User Manual
 Hongbo Zhang
-v1.4.2
+v1.5.1+dev
 :toc: left
 :toclevels: 4
 :source-highlighter: pygments
