add a simple release note and correct docs

--- a/site/docsource/OCaml-call-JS.adoc
+++ b/site/docsource/OCaml-call-JS.adoc
@@ -1352,7 +1352,7 @@ Below is a contrived core example:
 type element
 type dom
 external getElementById : string -> element option = "" 
-[@@bs.send.pipe:dom] [@@bs.return {null_to_opt}] // <1>
+[@@bs.send.pipe:dom] [@@bs.return null_to_opt] // <1>
 
 let test dom = 
     let elem = dom |> getElementById "haha"  in
